@@ -186,6 +186,7 @@ struct c3x_config {
 	struct table unit_limits; // Maps unit type names (strings) to pointers to limit objects (struct unit_type_limit *)
 	bool allow_upgrades_in_any_city;
 	bool do_not_generate_volcanos;
+	bool do_not_pollute_impassable_tiles;
 
 	bool enable_trade_net_x;
 	bool optimize_improvement_loops;
