@@ -518,3 +518,6 @@ allow_upgrades_in_any_city = false
 
 ; Stops the game from placing volcanos during map generation. Any tiles that would have been volcanos will be mountains instead.
 do_not_generate_volcanos = false
+
+; Stops the game from placing pollution on impassable tiles
+do_not_pollute_impassable_tiles = false
